follower card alignment corrected

--- a/src/components/FollowersCard/FollowersCard.css
+++ b/src/components/FollowersCard/FollowersCard.css
@@ -2,21 +2,21 @@
   width: 100%;
   border-radius: 0.7rem;
   gap: 1rem;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+
   font-size: 13px;
-  max-height: 10rem;
-  border: 5px solid blue;
+  max-height: auto;
 }
 .follower {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  gap: 40px;
   align-items: center;
-  gap:10px;
-  
 }
 
-
+.follower > div {
+  display: flex;
+}
 
 .followerImage {
   width: 3.2rem;
@@ -28,11 +28,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: flex-start;
 
-  max-width: 100px;
-  border: 1px solid red;
-
+  width: 8rem;
 }
 
 .name > span:nth-of-type(1) {
